--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.3.RELEASE</version>
+        <version>1.5.4.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -25,8 +25,14 @@
           <java.version>1.8</java.version>
     </properties>
 
-    <dependencyManagement>
         <dependencies>
+
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>1.18.2</version>
+            </dependency>
+
             <!--eureka server -->
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
@@ -43,26 +49,32 @@
             <!-- spring boot test-->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-configuration-processor</artifactId>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-web</artifactId>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-test</artifactId>
                 <scope>test</scope>
             </dependency>
         </dependencies>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>Dalston.SR1</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
     </dependencyManagement>
 
-    <!--<distributionManagement>-->
-        <!--<repository>-->
-            <!--<id>dev-repository-server</id>-->
-            <!--<name>Dev Release Repo</name>-->
-            <!--<url>http://maven.99zmall.com:8181/nexus/content/repositories/releases/</url>-->
-        <!--</repository>-->
-        <!--<snapshotRepository>-->
-            <!--<id>dev-repository-server</id>-->
-            <!--<name>Dev Snapshot Repo</name>-->
-            <!--<url>http://maven.99zmall.com:8181/nexus/content/repositories/snapshots/</url>-->
-        <!--</snapshotRepository>-->
 
-
-    <!--</distributionManagement>-->
 
     <modules>
         <module>springcloud-app-eureka-server</module>
