--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,8 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>1.5.4.RELEASE</version>
+        <!--<version>2.0.5.RELEASE</version>-->
+        <version>2.0.5.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -34,18 +35,12 @@
             </dependency>
 
             <!--eureka server -->
+
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-starter-eureka</artifactId>
+                <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
             </dependency>
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-starter-eureka-server</artifactId>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-starter-config</artifactId>
-            </dependency>
+
             <!-- spring boot test-->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
@@ -67,7 +62,7 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
-                <version>Dalston.SR1</version>
+                <version>Finchley.SR2</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -79,6 +74,7 @@
     <modules>
         <module>springcloud-app-eureka-server</module>
         <module>springcloud-app-eureka-client</module>
+         <module>springcloud-app-config</module>
 
     </modules>
 
