--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,21 @@
                 <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
             </dependency>
 
+            <!-- config dependency -->
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-config-server</artifactId>
+            </dependency>
+
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-config</artifactId>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-actuator</artifactId>
+            </dependency>
+
             <!-- spring boot test-->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
@@ -74,7 +89,8 @@
     <modules>
         <module>springcloud-app-eureka-server</module>
         <module>springcloud-app-eureka-client</module>
-         <module>springcloud-app-config</module>
+        <module>springcloud-app-config-server</module>
+        <module>springcloud-app-config-client</module>
 
     </modules>
 
@@ -87,6 +103,23 @@
                  <enabled>false</enabled>
              </snapshots>
          </repository>
+
+        <repository>
+            <id>spring-milestones</id>
+            <name>Spring Milestones</name>
+            <url>https://repo.spring.io/libs-milestone</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>spring-snapshots</id>
+            <name>Spring Snapshots</name>
+            <url>https://repo.spring.io/libs-snapshot</url>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
      </repositories>
 
 
