--- a/springcloud-app-eureka-client/src/main/resources/application.yml
+++ b/springcloud-app-eureka-client/src/main/resources/application.yml
@@ -6,4 +6,4 @@ server:
     port: 8762
 spring:
     application:
-        name: springcloud-app-eureka-client.service-helloworld
+        name: springcloud-app-eureka-client
