--- a/pom.xml
+++ b/pom.xml
@@ -34,27 +34,6 @@
                 <version>1.18.2</version>
             </dependency>
 
-            <!--eureka server -->
-
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
-            </dependency>
-
-            <!-- config dependency -->
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-config-server</artifactId>
-            </dependency>
-
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-starter-config</artifactId>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-actuator</artifactId>
-            </dependency>
 
             <!-- spring boot test-->
             <dependency>
@@ -77,7 +56,9 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
-                <version>Finchley.SR2</version>
+                <!--<version>Finchley.SR2</version>-->
+                <version>Finchley.RELEASE</version>
+
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
