add springcloud-app-ribbon-service for balance load demo

--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,7 @@
         <module>springcloud-app-eureka-client</module>
         <module>springcloud-app-config-server</module>
         <module>springcloud-app-config-client</module>
+        <module>springcloud-app-ribbon-service</module>
 
     </modules>
 
