--- a/springcloud-app-config-client/src/main/resources/bootstrap.yml
+++ b/springcloud-app-config-client/src/main/resources/bootstrap.yml
@@ -5,7 +5,9 @@ spring:
     config:
       label: master
       profile: dev
+      #use direct link
 #      uri: http://localhost:8888/
+      #use eureka register link
       discovery:
         enabled: true
         serviceId: springcloud-app-config-server
