--- a/springcloud-app-eureka-server/src/main/resources/application.yml
+++ b/springcloud-app-eureka-server/src/main/resources/application.yml
@@ -1,3 +1,4 @@
+### 单节点模式
 server:
   port: 8761
 
@@ -9,3 +10,48 @@ eureka:
     fetchRegistry: false
     serviceUrl:
       defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
+#### 集群模式
+#spring:
+#  application:
+#    name: springcloud-app-eureka-server
+#  profiles: peer1
+#server:
+#  port: 8000
+#eureka:
+#  instance:
+#    hostname: peer1
+#  client:
+#    serviceUrl:
+#      defaultZone: http://peer2:8001/eureka/,http://peer3:8002/eureka/
+#    fetch-registry: true
+#    register-with-eureka: true
+#---
+#spring:
+#  application:
+#    name: spring-cloud-eureka
+#  profiles: peer2
+#server:
+#  port: 8001
+#eureka:
+#  instance:
+#    hostname: peer2
+#  client:
+#    serviceUrl:
+#      defaultZone: http://peer1:8000/eureka/,http://peer3:8002/eureka/
+#    fetch-registry: true
+#    register-with-eureka: true
+#---
+#spring:
+#  application:
+#    name: spring-cloud-eureka
+#  profiles: peer3
+#server:
+#  port: 8002
+#eureka:
+#  instance:
+#    hostname: peer3
+#  client:
+#    serviceUrl:
+#      defaultZone: http://peer1:8000/eureka/,http://peer2:8001/eureka/
+#    fetch-registry: true
+#    register-with-eureka: true
