--- a/springcloud-app-config-client/src/main/resources/bootstrap.yml
+++ b/springcloud-app-config-client/src/main/resources/bootstrap.yml
@@ -20,3 +20,5 @@ eureka:
     client:
         serviceUrl:
             defaultZone: http://localhost:8761/eureka/
+#            eureka cluster mode
+#            defaultZone: http://peer1:8000/eureka/,http://peer3:8001/eureka/,http://peer3:8002/eureka/
