--- a/springcloud-app-ribbon-service/src/main/resources/application.yml
+++ b/springcloud-app-ribbon-service/src/main/resources/application.yml
@@ -2,6 +2,9 @@ eureka:
     client:
         serviceUrl:
             defaultZone: http://localhost:8761/eureka/
+#            eureka cluster mode
+#            defaultZone: http://peer1:8000/eureka/,http://peer3:8001/eureka/,http://peer3:8002/eureka/
+
 server:
     port: 8764
 spring:
