--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.10.RELEASE</version>
+        <version>2.1.15.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -45,6 +45,7 @@
         <mybatis-plus.version>3.3.2</mybatis-plus.version>
         <spring-kafka.version>2.2.11.RELEASE</spring-kafka.version>
         <commons-lang3.version>3.1</commons-lang3.version>
+        <gson.version>2.8.2</gson.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -104,6 +105,12 @@
                 <artifactId>commons-lang3</artifactId>
                 <version>${commons-lang3.version}</version>
             </dependency>
+            <!--gson-->
+            <dependency>
+                <groupId>com.google.code.gson</groupId>
+                <artifactId>gson</artifactId>
+                <version>${gson.version}</version>
+            </dependency>
 
         </dependencies>
     </dependencyManagement>
@@ -132,6 +139,7 @@
         <module>springcloud-app-gateway</module>
         <module>springcloud-app-common</module>
         <module>springcloud-app-api</module>
+        <module>springcloud-app-kafka</module>
     </modules>
 
 
