--- a/springcloud-app-ribbon-service/pom.xml
+++ b/springcloud-app-ribbon-service/pom.xml
@@ -13,7 +13,7 @@
 
     <name>springcloud-app-ribbon-service</name>
     <!-- FIXME change it to the project's website -->
-    <url>http://www.costlend.com</url>
+    <url>http://www.vincentli.top</url>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
