update rabbit fanout mode practise

--- a/springcloud-app-rabbitmq/springcloud-app-rabbitmq-consumer/src/main/resources/application.properties
+++ b/springcloud-app-rabbitmq/springcloud-app-rabbitmq-consumer/src/main/resources/application.properties
@@ -12,3 +12,5 @@ rabbitmq.config.exchange = mc.Ex.demo.test
 
 #自定义队列名称
 rabbitmq.consumer.queue.name =mc.queue.demo.test.consume
+
+rabbitmq.consumer.2.queue.name = mc.queue.demo.test.consume2
