--- a/springcloud-app-rabbitmq/springcloud-app-rabbitmq-producer/src/main/resources/application.properties
+++ b/springcloud-app-rabbitmq/springcloud-app-rabbitmq-producer/src/main/resources/application.properties
@@ -7,6 +7,9 @@ spring.rabbitmq.port = 5672
 spring.rabbitmq.username = admin
 spring.rabbitmq.password = 123456
 
+
 # 自定义配置应用于消息生产
 #交换器名称
 rabbitmq.config.exchange = mc.Ex.demo.test
+#自定义队列名称
+rabbitmq.producer.queue.name =mc.queue.demo.test
