--- a/springcloud-app-kafka/springcloud-app-kafka-consumer/pom.xml
+++ b/springcloud-app-kafka/springcloud-app-kafka-consumer/pom.xml
@@ -36,7 +36,7 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-
+        <!--spring-kafka-->
         <dependency>
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka</artifactId>
