--- a/springcloud-app-kafka/springcloud-app-kafka-producer/pom.xml
+++ b/springcloud-app-kafka/springcloud-app-kafka-producer/pom.xml
@@ -35,7 +35,7 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-
+        <!--spring-kafka-->
         <dependency>
             <groupId>org.springframework.kafka</groupId>
             <artifactId>spring-kafka</artifactId>
