--- a/springcloud-app-rabbitmq/springcloud-app-rabbitmq-consumer/pom.xml
+++ b/springcloud-app-rabbitmq/springcloud-app-rabbitmq-consumer/pom.xml
@@ -31,7 +31,7 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-
+        <!-- rabbitmq 依赖 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-amqp</artifactId>
@@ -40,11 +40,6 @@
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>com.licq</groupId>
-            <artifactId>springcloud-app-rabbitmq-common</artifactId>
         </dependency>
 
     </dependencies>
