--- a/springcloud-app-rabbitmq/springcloud-app-rabbitmq-producer/pom.xml
+++ b/springcloud-app-rabbitmq/springcloud-app-rabbitmq-producer/pom.xml
@@ -35,7 +35,7 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-
+        <!-- rabbitmq 依赖 -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-amqp</artifactId>
