--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.15.RELEASE</version>
+        <version>2.3.3.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
@@ -25,7 +25,8 @@
         <java.version>1.8</java.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <spring-cloud.version>Greenwich.SR3</spring-cloud.version>
+        <!--<spring-cloud.version>Greenwich.SR3</spring-cloud.version>-->
+        <spring-cloud.version>Hoxton.SR8</spring-cloud.version>
         <fastjson.version>1.2.68</fastjson.version>
         <apollo.version>1.5.1</apollo.version>
         <alibaba-cloud.version>2.1.1.RELEASE</alibaba-cloud.version>
@@ -55,13 +56,6 @@
                 <artifactId>lombok</artifactId>
                 <version>1.18.2</version>
             </dependency>
-
-
-
-            <!--<dependency>-->
-                <!--<groupId>org.springframework.boot</groupId>-->
-                <!--<artifactId>spring-boot-configuration-processor</artifactId>-->
-            <!--</dependency>-->
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
@@ -112,6 +106,20 @@
                 <version>${gson.version}</version>
             </dependency>
 
+            <!--apollo-->
+            <dependency>
+                <groupId>com.ctrip.framework.apollo</groupId>
+                <artifactId>apollo-client</artifactId>
+                <version>${apollo.version}</version>
+            </dependency>
+
+            <!--redis-->
+            <dependency>
+                <groupId>redis.clients</groupId>
+                <artifactId>jedis</artifactId>
+                <version>${jedis.version}</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
@@ -142,6 +150,8 @@
         <module>springcloud-app-kafka</module>
         <module>springcloud-app-rabbitmq</module>
         <module>springcloud-app-feign-client</module>
+        <module>springcloud-app-apollo</module>
+        <module>springcloud-app-docker</module>
     </modules>
 
 
