--- a/springcloud-app-common/pom.xml
+++ b/springcloud-app-common/pom.xml
@@ -11,7 +11,8 @@
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
     <artifactId>springcloud-app-common</artifactId>
-
+    <name>springcloud-app-common</name>
+    <description>公共模块</description>
     <properties>
         <java.version>1.8</java.version>
     </properties>
@@ -33,5 +34,17 @@
         </dependency>
 
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
