--- a/springcloud-app-gateway/pom.xml
+++ b/springcloud-app-gateway/pom.xml
@@ -7,7 +7,7 @@
         <artifactId>springcloud-app-parent</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-
+    <modelVersion>4.0.0</modelVersion>
     <artifactId>springcloud-app-gateway</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
