--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
-    <groupId>com.licq</groupId>
+    <groupId>com.vincent</groupId>
     <artifactId>springcloud-app-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>springcloud-app-parent</name>
