--- a/springcloud-app-apollo/pom.xml
+++ b/springcloud-app-apollo/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>springcloud-app-parent</artifactId>
-        <groupId>com.licq</groupId>
+        <groupId>com.vincent</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
