--- a/springcloud-app-config-client/pom.xml
+++ b/springcloud-app-config-client/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.licq</groupId>
+        <groupId>com.vincent</groupId>
         <artifactId>springcloud-app-parent</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
