--- a/springcloud-app-eureka-client/pom.xml
+++ b/springcloud-app-eureka-client/pom.xml
@@ -5,12 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>com.licq</groupId>
+        <groupId>com.vincent</groupId>
         <artifactId>springcloud-app-parent</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>com.licq</groupId>
+    <groupId>com.vincent</groupId>
     <artifactId>springcloud-app-eureka-client</artifactId>
     <packaging>jar</packaging>
     <name>springcloud-app-eureka-client</name>
