--- a/springcloud-app-eureka-server/pom.xml
+++ b/springcloud-app-eureka-server/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
      <parent>
-        <groupId>com.licq</groupId>
+        <groupId>com.vincent</groupId>
         <artifactId>springcloud-app-parent</artifactId>
          <version>1.0-SNAPSHOT</version>
     </parent>
@@ -18,7 +18,7 @@
     <!--</parent>-->
 
 
-    <groupId>com.licq</groupId>
+    <groupId>com.vincent</groupId>
     <artifactId>springcloud-app-eureka-server</artifactId>
     <packaging>jar</packaging>
     <name>springcloud-app-eureka-server</name>
