--- a/springcloud-app-rabbitmq/springcloud-app-rabbitmq-consumer/pom.xml
+++ b/springcloud-app-rabbitmq/springcloud-app-rabbitmq-consumer/pom.xml
@@ -2,7 +2,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <parent>
         <artifactId>springcloud-app-rabbitmq</artifactId>
-        <groupId>com.licq</groupId>
+        <groupId>com.vincent</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
