--- a/springcloud-app-rabbitmq/springcloud-app-rabbitmq-producer/pom.xml
+++ b/springcloud-app-rabbitmq/springcloud-app-rabbitmq-producer/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <parent>
         <artifactId>springcloud-app-rabbitmq</artifactId>
-        <groupId>com.licq</groupId>
+        <groupId>com.vincent</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
