--- a/springcloud-app-gateway/pom.xml
+++ b/springcloud-app-gateway/pom.xml
@@ -56,6 +56,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>com.vincent.springcloud.app.gateway.SpringCloudGatewayApplication</mainClass>
+                </configuration>
             </plugin>
         </plugins>
     </build>
