--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
         <spring-kafka.version>2.2.11.RELEASE</spring-kafka.version>
         <commons-lang3.version>3.1</commons-lang3.version>
         <gson.version>2.8.2</gson.version>
+        <rocketmq-spring-boot-starter.version>2.1.1</rocketmq-spring-boot-starter.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -119,6 +120,14 @@
                 <version>${jedis.version}</version>
             </dependency>
 
+
+            <dependency>
+                <groupId>org.apache.rocketmq</groupId>
+                <artifactId>rocketmq-spring-boot-starter</artifactId>
+                <version>${rocketmq-spring-boot-starter.version}</version>
+            </dependency>
+
+
         </dependencies>
     </dependencyManagement>
 
@@ -151,6 +160,7 @@
         <module>springcloud-app-feign-client</module>
         <module>springcloud-app-apollo</module>
         <module>springcloud-app-docker</module>
+        <module>springcloud-app-rocketmq</module>
     </modules>
 
 
