--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,11 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.3.3.RELEASE</version>
+        <version>2.1.15.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
-    <groupId>com.licq</groupId>
+    <groupId>com.vincent</groupId>
     <artifactId>springcloud-app-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>springcloud-app-parent</name>
@@ -25,8 +25,7 @@
         <java.version>1.8</java.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <!--<spring-cloud.version>Greenwich.SR3</spring-cloud.version>-->
-        <spring-cloud.version>Hoxton.SR8</spring-cloud.version>
+        <spring-cloud.version>Greenwich.SR3</spring-cloud.version>
         <fastjson.version>1.2.68</fastjson.version>
         <apollo.version>1.5.1</apollo.version>
         <alibaba-cloud.version>2.1.1.RELEASE</alibaba-cloud.version>
@@ -47,6 +46,7 @@
         <spring-kafka.version>2.2.11.RELEASE</spring-kafka.version>
         <commons-lang3.version>3.1</commons-lang3.version>
         <gson.version>2.8.2</gson.version>
+        <rocketmq-spring-boot-starter.version>2.1.1</rocketmq-spring-boot-starter.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -120,6 +120,14 @@
                 <version>${jedis.version}</version>
             </dependency>
 
+
+            <dependency>
+                <groupId>org.apache.rocketmq</groupId>
+                <artifactId>rocketmq-spring-boot-starter</artifactId>
+                <version>${rocketmq-spring-boot-starter.version}</version>
+            </dependency>
+
+
         </dependencies>
     </dependencyManagement>
 
@@ -152,6 +160,8 @@
         <module>springcloud-app-feign-client</module>
         <module>springcloud-app-apollo</module>
         <module>springcloud-app-docker</module>
+        <module>springcloud-app-rocketmq</module>
+        <module>springcloud-app-config-bus-client</module>
     </modules>
 
 
