--- a/springcloud-app-config-server/pom.xml
+++ b/springcloud-app-config-server/pom.xml
@@ -5,12 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
 
      <parent>
-        <groupId>com.licq</groupId>
+        <groupId>com.vincent</groupId>
         <artifactId>springcloud-app-parent</artifactId>
          <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>com.licq</groupId>
+    <groupId>com.vincent</groupId>
     <artifactId>springcloud-app-config-server</artifactId>
     <packaging>jar</packaging>
     <name>springcloud-app-config-server</name>
@@ -33,6 +33,12 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-config-server</artifactId>
+        </dependency>
+
+        <!-- Spring Cloud Bus rabbitmq -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-bus-amqp</artifactId>
         </dependency>
 
 
