--- a/springcloud-app-feign-client/pom.xml
+++ b/springcloud-app-feign-client/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>springcloud-app-parent</artifactId>
-        <groupId>com.licq</groupId>
+        <groupId>com.vincent</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -34,6 +34,12 @@
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
 
+        <!--hystrix-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+        </dependency>
+
         <!--nacos-->
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
@@ -42,7 +48,7 @@
 
 
         <dependency>
-            <groupId>com.licq</groupId>
+            <groupId>com.vincent</groupId>
             <artifactId>springcloud-app-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
