--- a/springcloud-app-gateway/pom.xml
+++ b/springcloud-app-gateway/pom.xml
@@ -3,7 +3,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>com.licq</groupId>
+        <groupId>com.vincent</groupId>
         <artifactId>springcloud-app-parent</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
@@ -38,7 +38,7 @@
             <artifactId>spring-cloud-commons</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.licq</groupId>
+            <groupId>com.vincent</groupId>
             <artifactId>springcloud-app-common</artifactId>
             <version>1.0-SNAPSHOT</version>
             <exclusions>
@@ -56,6 +56,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                    <mainClass>com.vincent.springcloud.app.gateway.SpringCloudGatewayApplication</mainClass>
+                </configuration>
             </plugin>
         </plugins>
     </build>
