--- a/springcloud-app-seata/springcloud-app-seata-account/pom.xml
+++ b/springcloud-app-seata/springcloud-app-seata-account/pom.xml
@@ -49,6 +49,7 @@
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>2.0.0</version>
         </dependency>
         <!--mysql-->
         <dependency>
