--- a/springcloud-app-seata/springcloud-app-seata-order/pom.xml
+++ b/springcloud-app-seata/springcloud-app-seata-order/pom.xml
@@ -74,6 +74,7 @@
         <dependency>
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-alibaba-seata</artifactId>
+            <version>2.1.0.RELEASE</version>
             <exclusions>
                 <exclusion>
                     <artifactId>seata-all</artifactId>
@@ -84,6 +85,7 @@
         <dependency>
             <groupId>io.seata</groupId>
             <artifactId>seata-all</artifactId>
+            <version>1.3.0</version>
         </dependency>
         <dependency>
             <groupId>com.vincent</groupId>
