--- a/springcloud-app-seata/springcloud-app-seata-storage/pom.xml
+++ b/springcloud-app-seata/springcloud-app-seata-storage/pom.xml
@@ -24,7 +24,7 @@
         <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
-            <version>2.1.3.RELEASE</version>
+<!--            <version>2.1.3.RELEASE</version>-->
         </dependency>
 
         <dependency>
