feat: add springcloud-app-nacos-config module for nacos config split use

--- a/pom.xml
+++ b/pom.xml
@@ -3,14 +3,6 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
-    <parent>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.1.15.RELEASE</version>
-        <relativePath/> <!-- lookup parent from repository -->
-    </parent>
-
     <groupId>com.vincent</groupId>
     <artifactId>springcloud-app-parent</artifactId>
     <version>1.0-SNAPSHOT</version>
@@ -25,29 +17,29 @@
         <java.version>1.8</java.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <spring-cloud.version>Greenwich.SR3</spring-cloud.version>
         <fastjson.version>1.2.68</fastjson.version>
         <apollo.version>1.5.1</apollo.version>
-        <alibaba-cloud.version>2.1.1.RELEASE</alibaba-cloud.version>
-        <nacos.version>2.1.1.RELEASE</nacos.version>
-        <spring-gateway.version>2.2.0.RELEASE</spring-gateway.version>
+        <spring-cloud.version>Hoxton.SR12</spring-cloud.version>
+        <spring-boot.version>2.3.12.RELEASE</spring-boot.version>
+        <alibaba-cloud.version>2.2.7.RELEASE</alibaba-cloud.version>
         <mybatis-generator.version>1.4.0</mybatis-generator.version>
         <pherialize.version>1.2.4</pherialize.version>
         <jedis.version>3.0.0</jedis.version>
         <commons-httpclient.version>3.1</commons-httpclient.version>
         <httpclient.version>4.5.13</httpclient.version>
         <druid.version>1.1.20</druid.version>
-        <spring-web.version>5.1.11.RELEASE</spring-web.version>
+<!--        <spring-web.version>5.1.11.RELEASE</spring-web.version>-->
         <spring-kafka.version>2.2.11.RELEASE</spring-kafka.version>
         <dynamic-datasource.version>2.5.4</dynamic-datasource.version>
         <mybatis.version>2.1.1</mybatis.version>
         <es.version>7.4.0</es.version>
         <mybatis-plus.version>3.3.2</mybatis-plus.version>
-        <spring-kafka.version>2.2.11.RELEASE</spring-kafka.version>
-        <commons-lang3.version>3.1</commons-lang3.version>
+        <commons-lang3.version>3.12.0</commons-lang3.version>
+        <commons-pool2.version>2.11.1</commons-pool2.version>
         <gson.version>2.8.2</gson.version>
         <rocketmq-spring-boot-starter.version>2.1.1</rocketmq-spring-boot-starter.version>
         <seata.version>1.4.0</seata.version>
+        <fst.version>2.57</fst.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -56,6 +48,14 @@
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
                 <version>1.18.2</version>
+            </dependency>
+            <!-- SpringBoot -->
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>${spring-boot.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
@@ -69,19 +69,9 @@
                 <artifactId>spring-cloud-alibaba-dependencies</artifactId>
                 <version>${alibaba-cloud.version}</version>
                 <type>pom</type>
+                <scope>import</scope>
             </dependency>
-            <!--nacos-->
-            <dependency>
-                <groupId>com.alibaba.cloud</groupId>
-                <artifactId>spring-cloud-starter-alibaba-nacos-discovery</artifactId>
-                <version>${nacos.version}</version>
-            </dependency>
-            <!--gateway-->
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-starter-gateway</artifactId>
-                <version>${spring-gateway.version}</version>
-            </dependency>
+
             <!--http-->
             <dependency>
                 <groupId>org.apache.httpcomponents</groupId>
@@ -120,8 +110,11 @@
                 <artifactId>jedis</artifactId>
                 <version>${jedis.version}</version>
             </dependency>
-
-
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-pool2</artifactId>
+                <version>${commons-pool2.version}</version>
+            </dependency>
             <dependency>
                 <groupId>org.apache.rocketmq</groupId>
                 <artifactId>rocketmq-spring-boot-starter</artifactId>
@@ -144,6 +137,12 @@
                 <groupId>io.seata</groupId>
                 <artifactId>seata-all</artifactId>
                 <version>${seata.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>de.ruedigermoeller</groupId>
+                <artifactId>fst</artifactId>
+                <version>${fst.version}</version>
             </dependency>
 
         </dependencies>
@@ -182,6 +181,7 @@
         <module>springcloud-app-config-bus-client</module>
         <module>springcloud-app-monitor</module>
         <module>springcloud-app-seata</module>
+        <module>springcloud-app-nacos-config</module>
     </modules>
 
 
