--- a/springcloud-app-common/pom.xml
+++ b/springcloud-app-common/pom.xml
@@ -20,10 +20,6 @@
     <dependencies>
 
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-            </dependency>
-        <dependency>
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>httpclient</artifactId>
         </dependency>
@@ -42,6 +38,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
                     <skip>true</skip>
+                    <finalName>${project.name}</finalName>
                 </configuration>
             </plugin>
         </plugins>
